# hrems

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main_cloud7works.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/endpoints/: __init__.py
app/api/endpoints/api_v1/: __init__.py  storage.py
app/core/: __init__.py  config.py
app/exceptions/: __init__.py  custom_exceptions.py  custom_exceptions_test.py
app/utils/: __init__.py  async_request.py  async_request_test.py  deps.py
terraform/: env-dev-terraform.tfvars  main.tf  terraform.tfstate  terraform.tfstate.1714650091.backup  terraform.tfstate.backup  variables.tf  versions.tf
