[tool.poetry]
name = "pdf-storage"
version = "0.1.0"
description = ""
authors = ["Cloud7works <egor.kazitski@cloud7works.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
secweb = "^1.9.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
tenacity = "^8.2.3"
azure-storage-blob = "^12.19.1"
azure-identity = "^1.16.0"
aiohttp = "^3.9.5"
paramiko = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
